unpackaged/main/default/objects/GSR_Time_To_Restore_Summary__c/GSR_Time_To_Restore_Summary__c.object-meta.xml
<CustomObject>
    <label>Time To Restore Summary</label>
    <nameField>
        <displayFormat>GSRTTR-{00000000}</displayFormat>
        <label>Time To Restore Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time To Restore Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>