unpackaged/main/default/objects/GSR_Time_To_Restore_Summary__c/fields/Max_Time_To_Restore__c.field-meta.xml
<CustomField>
    <fullName>Max_Time_To_Restore__c</fullName>
    <label>Max Time To Restore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>